css/general.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: Arial, Helvetica, sans-serif;
}

html,
body {
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  overflow: hidden;
}

canvas {
  width: 100%;
  height: 100%;
  display: block;
}

button {
  outline: none;
  border: none;
  background: none;
  cursor: pointer;
}

button:disabled {
  opacity: .7;
  cursor: not-allowed;
}

.controlls {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100dvh;
  padding: 10px;
  pointer-events: none;
  
  button {
    pointer-events: all;
    background-color: #abc;
    border-radius: 20px;
    overflow: hidden;
    border: 2px solid #678;
    padding: 5px 10px;

    & + & {
      margin-left: 10px;
    }

    &:disabled {
      opacity: 1;
      background-color: rgb(94, 110, 126);
    }

    &.activeTool {
      border-color: yellow;
    }
  }
}

.version {
  font-size: 14px;
  color: white;
  position: absolute;
  top: 10px;
  right: 10px;
}

.hide {
  display: none !important;
}

.modal_scaleCube {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100dvh;
  background-color: #0005;
  backdrop-filter: blur(10px);
  display: flex;
  align-items: center;
  justify-content: center;

  .modal {
    padding: 10px;
    background-color: white;
    border-radius: 10px;

    display: flex;
    flex-direction: column;
    gap: 10px;

    input {
      padding: 5px;
    }

    button {
      border: 1px solid;
      padding: 5px;
      border-radius: 5px;

      &.done {
        color: green;
      }
      &.cancel {
        color: red;
      }
    }
  }
}

.notificationsContainer {
  pointer-events: none;
  position: absolute;
  top: 10px;
  left: 0;
  width: 100%;
  height: 100dvh;
  display: flex;
  flex-direction: column;
  align-items: center;

  .notifications {
    display: flex;
    flex-direction: column;
    gap: 5px;
    width: 300px;
    height: 200px;
    overflow: hidden;

    .notification {
      width: 100%;
      border: 2px solid #0008;
      border-radius: 5px;
      padding: 3px 7px;
      color: #0009;
      background-color: var(--color);
      animation: notificationHide 1s 3.5s;
    }
  
    .notification_info {
      --color: rgb(196, 196, 196);
    }
    .notification_warn {
      --color: rgb(226, 185, 131);
    }
    .notification_error {
      --color: rgb(226, 131, 131);
    }
    .notification_success {
      --color: rgb(131, 226, 136);
    }
  }
}

@keyframes notificationHide {
  100% {
    opacity: 0;
  }
}

